--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-APP_NAME=Laravel
+APP_NAME=Forms
 APP_ENV=local
 APP_KEY=base64:4kQso04vgM2SLPzBAypzvNz1jftzd9y2G7vlGBOHhNw=
 APP_DEBUG=true
@@ -8,12 +8,15 @@ LOG_CHANNEL=stack
 LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
+WWWGROUP=1000
+WWWUSER=1000
+
 DB_CONNECTION=pgsql
 DB_HOST=pgsql
 DB_PORT=5432
-DB_DATABASE=laravel
-DB_USERNAME=sail
-DB_PASSWORD=password
+DB_DATABASE=forms
+DB_USERNAME=forms
+DB_PASSWORD=fieng1Dahjaogoo3
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
